# Sablina-Tamagotchi-ESP32

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
3D_Printing/: Gehäuse.step  Gehäuse.stl
SablinaTamagotchi_2.0/: PEER_VALIDATION.md  SablinaTamagotchi.ino  SablinaTamagotchi.ino.disabled  SablinaTamagotchi_2.0.ino  SablinaTamagotchi_original.ino.bak  ble_service.h  config.h  imu_handler.h  llm_personality.h  partitions.csv  sablinaeat.h  sablinaeat10.h  sablinaeat11.h  sablinaeat2.h  sablinaeat3.h  sablinaeat4.h  sablinaeat5.h  sablinaeat6.h  sablinaeat7.h  sablinaeat8.h  sablinaeat9.h  sablinagif.h  sablinasleep.h  secrets.h.example  telegram_bot.h  wifi_audit.h
SablinaTamagotchi_2.0/tools/: convert_face_videos.py  upload_faces_spiffs.sh
SablinaTamagotchi_2.0_idf/: Kconfig.projbuild  LLM_UI_ESTABLE_RUNBOOK.md  sdkconfig
SablinaTamagotchi_2.0_idf/build-internal/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  data-flash_args  flash_app_args  flash_args  flash_args.in  flasher_args.json  https_server.crt.S  kconfigs.in  (+8 more)
SablinaTamagotchi_2.0_idf/main/: CMakeLists.txt  app_main.c  ble_bridge.c  ble_bridge.h  idf_component.yml  internal_llm_bridge.c  internal_llm_bridge.h  lcd_ui.c  lcd_ui.h  llm.c
SablinaTamagotchi_2.0_idf_internal/: CMakeLists.txt  README.md  partitions.csv
SablinaTamagotchi_2.0_idf_internal/main/: CMakeLists.txt  Vernon_ST7789T.c  agent_tools.h  app_main.c  arduino_entry.cpp  ble_bridge.c  idf_component.yml  llm.c  llm.h  sablina_sketch.cpp
backlight_probe/: backlight_probe.ino
simulator/: app.js  index.html  style.css  tools.html  wifi-scan-server.js
tools/: esp32_llm_assets_info.sh
(+184 files in other folders)
